# custom-keyboard

./: CMakeLists.txt  README.md  main.c  matrix.c  matrix.h
notes/: gpio.md  layout.md  notes.md  pico_usb_printf.md
